# EMBS-BHI-2025-reproduce

./: .gitignore  .gitmodules  README.md  dataset_analysis.ipynb  microstate-analysis.ipynb  requirements.txt
1.dataset_preparation/: README.md  dataset.py  prepare_dataset.sh
2.microstate_training/: (example)segmentation_with_microstates.py  2.1.patch_prep.sh  2.2_train_microstate_on_dev.sh  2.microstate_extraction.py  Makefile  README.md  evaluate_gev.py  find_noisy_channels.py  microstate_extraction.py  patch_prep.sh  signal_to_microstate_sequence.py
3.phase_space_reconstruction/: Makefile  README.md  dataset_splitting_and_segmentation.py  segmentation_module.py
4.pcfg_training/: 1_convert_npy_to_plain_text-exp3.sh  1_convert_npy_to_plain_text-exp4.sh  1_convert_npy_to_plain_text.sh  2_2_convert_state_length.sh  2_phase_space_reconstruction-exp3.sh  2_phase_space_reconstruction-exp4.sh  2_phase_space_reconstruction.sh  3_split_dataset.sh  3_split_dataset_all_area.sh  4_make_training_program.sh  5_training-normal-only.sh  5_training.sh  6_evaluation.sh  Makefile  README.md  config_sentence_encoding_normal.yaml  config_train.yaml  config_valida_only.yaml  generate_config.sh  (+13 more)
lib/cuda-inside-outside/: CMakeLists.txt  Makefile
lib/cuda-inside-outside/configurations/: config.yaml
lib/cuda-inside-outside/include/: device_management.cuh  macros.def
lib/cuda-inside-outside/include/utils/: data_structure.hpp  grammar_loader.cuh
lib/cuda-inside-outside/src/: cuda-inside-outside-main.cu  device_management.cu
lib/cuda-inside-outside/src/utils/: grammar_loader.cu
(+140 files in other folders)
